--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
+    "@react-three/fiber": "^8.0.12",
     "@trpc/client": "^9.23.2",
     "@trpc/next": "^9.23.2",
     "@trpc/react": "^9.23.2",
     "@trpc/server": "^9.23.2",
-    "next": "^12.1.6-canary.4",
+    "algoliasearch": "^4.13.0",
+    "next": "^12.1.6",
     "next-i18next": "^11.0.0",
     "next-pwa": "^5.5.2",
+    "pusher": "^5.1.0-beta",
+    "pusher-js": "^7.1.0-beta",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.30.0",
+    "react-instantsearch-dom": "^6.24.0",
+    "react-instantsearch-hooks": "^6.24.0",
+    "react-instantsearch-hooks-web": "^6.24.0",
+    "react-markdown": "^8.0.3",
+    "react-query": "^3.38.0",
+    "three": "^0.140.0",
     "zod": "^3.14.4"
   },
   "devDependencies": {
@@ -31,6 +41,7 @@
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/react-instantsearch-dom": "^6.12.3",
     "animated-tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
