--- a/package.json
+++ b/package.json
@@ -10,26 +10,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.8.8",
+    "@radix-ui/react-icons": "^1.1.1",
     "@react-three/fiber": "^8.0.12",
     "@trpc/client": "^9.23.2",
     "@trpc/next": "^9.23.2",
     "@trpc/react": "^9.23.2",
     "@trpc/server": "^9.23.2",
+    "ahooks": "^3.4.1",
     "algoliasearch": "^4.13.0",
+    "aos": "^2.3.4",
     "next": "^12.1.6",
     "next-i18next": "^11.0.0",
     "next-pwa": "^5.5.2",
+    "next-themes": "^0.2.0",
     "pusher": "^5.1.0-beta",
     "pusher-js": "^7.1.0-beta",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.30.0",
+    "react-hook-form": "^7.31.3",
     "react-instantsearch-dom": "^6.24.0",
     "react-instantsearch-hooks": "^6.24.0",
     "react-instantsearch-hooks-web": "^6.24.0",
     "react-markdown": "^8.0.3",
     "react-query": "^3.38.0",
+    "react-svg-blob": "^0.3.0",
+    "tabler-icons-react": "^1.48.1",
     "three": "^0.140.0",
     "zod": "^3.14.4"
   },
@@ -38,6 +46,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/aos": "^3.0.4",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
