--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ahooks": "^3.4.1",
     "algoliasearch": "^4.13.0",
     "aos": "^2.3.4",
+    "cloudinary-build-url": "^0.2.4",
+    "moment": "^2.29.3",
     "next": "^12.1.6",
     "next-i18next": "^11.0.0",
     "next-pwa": "^5.5.2",
@@ -42,6 +44,7 @@
     "zod": "^3.14.4"
   },
   "devDependencies": {
+    "@cld-apis/types": "^0.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/line-clamp": "^0.4.0",
