--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-instantsearch-hooks": "^6.24.0",
     "react-instantsearch-hooks-web": "^6.24.0",
     "react-markdown": "^8.0.3",
+    "react-masonry-css": "^1.0.16",
     "react-query": "^3.38.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-svg-blob": "^0.3.0",
     "tabler-icons-react": "^1.48.1",
     "three": "^0.140.0",
