update about text

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-query": "^3.38.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-svg-blob": "^0.3.0",
+    "react-twemoji": "^0.5.0",
     "tabler-icons-react": "^1.48.1",
     "three": "^0.140.0",
     "usehooks-ts": "^2.5.4",
@@ -57,6 +58,7 @@
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-instantsearch-dom": "^6.12.3",
+    "@types/react-twemoji": "^0.4.0",
     "animated-tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
