--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.8.8",
+    "@icons-pack/react-simple-icons": "^5.0.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@react-three/fiber": "^8.0.12",
     "@trpc/client": "^9.23.2",
@@ -24,7 +25,7 @@
     "algoliasearch": "^4.13.0",
     "aos": "^2.3.4",
     "cloudinary-build-url": "^0.2.4",
-    "moment": "^2.29.3",
+    "luxon": "^2.4.0",
     "next": "^12.1.6",
     "next-i18next": "^11.0.0",
     "next-pwa": "^5.5.2",
@@ -42,7 +43,9 @@
     "react-query": "^3.38.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-svg-blob": "^0.3.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-twemoji": "^0.5.0",
+    "remark-gfm": "^3.0.1",
     "tabler-icons-react": "^1.48.1",
     "three": "^0.140.0",
     "usehooks-ts": "^2.5.4",
@@ -55,10 +58,12 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/aos": "^3.0.4",
+    "@types/luxon": "^2.3.2",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-instantsearch-dom": "^6.12.3",
+    "@types/react-syntax-highlighter": "^15.5.2",
     "@types/react-twemoji": "^0.4.0",
     "animated-tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.5",
